--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="./index.css">
     <meta charset="utf-8" />
-    <title>Reeally fucking hard react app</title>
+    <title>ETSYCLONE</title>
   </head>
   <body>
     <div id="root"></div>
